@@ -208,9 +208,9 @@ module ActiveScaffold::Actions
           next if active_scaffold_constraints[key]
           next if nested? and nested.param_name == key
           conditions[key] = if value.is_a?(Array)
-            value.map {|v| v == '' && not_string ? nil : column.type_cast(v) }
+            value.map {|v| v == '' && not_string ? nil : ActiveScaffold::Core.column_type_cast(v, column) }
           else
-            value == '' && not_string ? nil : column.type_cast(value)
+            value == '' && not_string ? nil : ActiveScaffold::Core.column_type_cast(value, column)
           end
         end
         conditions
